syntax = "proto3";

package proto;

option go_package = "/proto";

service Stock {
    rpc GetStockSummary (GetStockSummaryRequest) returns (GetStockSummaryResponse);
}

message GetStockSummaryRequest {
    string stockCode = 1;
    string toDate = 2;
    string fromDate = 3;
}

message StockSummary {
    string stock_code = 1;
    string date = 2;
    int64 prev = 3;
    int64 open = 4;
    int64 high = 5;
    int64 low = 6;
    int64 close = 7;
    int64 volume = 8;
    int64 value = 9;
    int64 average = 10;
}

message GetStockSummaryResponse {
    repeated StockSummary result = 1;
}